termos de serviço

--- a/tamplates/register.html
+++ b/tamplates/register.html
@@ -169,7 +169,7 @@
                 <div class="checkbox-group">
                     <input type="checkbox" id="terms" required>
                     <label for="terms">
-                        Eu aceito os <a href="#">Termos de Serviço</a> e a <a href="#">Política de Privacidade</a>
+                        Eu aceito os <a href="/tamplates/termos.html">Termos de Serviço</a>
                     </label>
                 </div>
 
