--- a/tamplates/playerlg.html
+++ b/tamplates/playerlg.html
@@ -12,6 +12,8 @@
 
     <!-- Arquivo CSS ligado à página de login do jogador -->
     <link rel="stylesheet" href="/static/styles/playerlg.css">
+
+    <link rel="icon" type="image/png" href="static/img/1logo.png">
 </head>
 
 <body>
