--- a/tamplates/register.html
+++ b/tamplates/register.html
@@ -10,6 +10,8 @@
 
     <!-- CSS específico da página de registro -->
     <link rel="stylesheet" href="/static/styles/register.css">
+
+    <link rel="icon" type="image/png" href="static/img/1logo.png">
 </head>
 
 <body>
