--- a/tamplates/Arsenal.html
+++ b/tamplates/Arsenal.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arsenal</title>
     <link rel="stylesheet" href="/static/styles/Arsenal.css">
+
+    <link rel="icon" type="image/png" href="static/img/1logo.png">
 </head>
 <body>
 
