--- a/tamplates/player.html
+++ b/tamplates/player.html
@@ -9,6 +9,8 @@
 
     <!-- Importa o CSS específico desta página -->
     <link rel="stylesheet" href="/static/styles/player.css">
+
+    <link rel="icon" type="image/png" href="static/img/1logo.png">
 </head>
 
 <body>
