--- a/tamplates/Arsenal.html
+++ b/tamplates/Arsenal.html
@@ -6,7 +6,7 @@
     <title>Arsenal</title>
     <link rel="stylesheet" href="/static/styles/Arsenal.css">
 
-    <link rel="icon" type="image/png" href="static/img/1logo.png">
+    <link rel="icon" type="image/png" href="/static/img/1logo.png">
 </head>
 <body>
 
