--- a/tamplates/Mestre.html
+++ b/tamplates/Mestre.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área do Mestre - Jogos de Purga</title>
     <link rel="stylesheet" href="/static/styles/Mestre.css">
-    <link rel="icon" type="image/png" href="static/img/1logo.png">
+    <link rel="icon" type="image/png" href="/static/img/1logo.png">
 </head>
 <body>
     <header>
