--- a/tamplates/player.html
+++ b/tamplates/player.html
@@ -10,7 +10,7 @@
     <!-- Importa o CSS específico desta página -->
     <link rel="stylesheet" href="/static/styles/player.css">
 
-    <link rel="icon" type="image/png" href="static/img/1logo.png">
+    <link rel="icon" type="image/png" href="/static/img/1logo.png">
 </head>
 
 <body>
