--- a/tamplates/playerlg.html
+++ b/tamplates/playerlg.html
@@ -13,7 +13,7 @@
     <!-- Arquivo CSS ligado à página de login do jogador -->
     <link rel="stylesheet" href="/static/styles/playerlg.css">
 
-    <link rel="icon" type="image/png" href="static/img/1logo.png">
+    <link rel="icon" type="image/png" href="/static/img/1logo.png">
 </head>
 
 <body>
