--- a/tamplates/register.html
+++ b/tamplates/register.html
@@ -11,7 +11,7 @@
     <!-- CSS específico da página de registro -->
     <link rel="stylesheet" href="/static/styles/register.css">
 
-    <link rel="icon" type="image/png" href="static/img/1logo.png">
+    <link rel="icon" type="image/png" href="/static/img/1logo.png">
 </head>
 
 <body>
