--- a/tamplates/termos.html
+++ b/tamplates/termos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos de Serviço - Jogos Vorazes</title>
     <link href="/static/styles/termos.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="static/img/1logo.png">
+    <link rel="icon" type="image/png" href="/static/img/1logo.png">
 </head>
 <body>
 
