--- a/tamplates/monstruario.html
+++ b/tamplates/monstruario.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monstruário</title>
     <link rel="stylesheet" href="/static/styles/monstruario.css">
-    <link rel="icon" type="image/png" href="static/img/1logo.png">
+    <link rel="icon" type="image/png" href="/static/img/1logo.png">
 </head>
 
 <body>
