--- a/tamplates/playerlg.html
+++ b/tamplates/playerlg.html
@@ -104,7 +104,7 @@
         <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
     </footer>
 
-    <!-- Arquivo JS com a lógica do login -->
+    <script src="/static/js/supabase.js"></script>
     <script src="/static/js/playerlg.js"></script>
 
 </body>
