--- a/tamplates/register.html
+++ b/tamplates/register.html
@@ -200,7 +200,7 @@
         <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
     </footer>
 
-    <!-- Arquivo JS com regras de validação e lógica do formulário -->
+    <script src="/static/js/supabase.js"></script>
     <script src="/static/js/register.js"></script>
 </body>
 </html>
