vamos ver teste #1

--- a/tamplates/register.html
+++ b/tamplates/register.html
@@ -184,7 +184,7 @@
                 </div>
 
                 <!-- Botão final -->
-                <button type="submit" class="btn-register">Criar Conta</button>
+                <button id="registerBtn">Registrar</button>
             </form>
 
             <!-- Link para login -->
