teste banco dado #2

--- a/tamplates/Arsenal.html
+++ b/tamplates/Arsenal.html
@@ -65,6 +65,6 @@
     <p class="copy">© 2024 Projeto baseado em Jogos Vorazes - Desenvolvido por Chapeleiro</p>
 </footer>
 
-<script src="/static/js/Arsenal.js"></script>
+<script type="module" src="/static/js/Arsenal.js"></script>
 </body>
 </html>
