--- a/tamplates/mestrelg.html
+++ b/tamplates/mestrelg.html
@@ -95,6 +95,6 @@
     <footer>
         <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
     </footer>
-    <script src="/static/js/mestrelg.js"></script>
+    <script type="module" src="/static/js/mestrelg.js"></script>
 </body>
 </html>
