--- a/tamplates/partições.html
+++ b/tamplates/partições.html
@@ -68,7 +68,7 @@
     <p class="copy">© 2024 Projeto baseado em Jogos Vorazes - Desenvolvido por Chapeleiro</p>
 </footer>
 
-<script src="/static/js/partições.js"></script>
+<script type="module" src="/static/js/partições.js"></script>
 
 </body>
 </html>
