--- a/tamplates/player.html
+++ b/tamplates/player.html
@@ -340,7 +340,8 @@
 
 
     <!-- ================= SCRIPT PRINCIPAL ================= -->
-    <script src="/static/js/player.js"></script>
+    <script type="module" src="/static/js/supabase.js"></script>
+    <script type="module" src="/static/js/player.js"></script>
 
 </body>
 </html>
