--- a/tamplates/playerlg.html
+++ b/tamplates/playerlg.html
@@ -104,8 +104,8 @@
         <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
     </footer>
 
-    <script src="/static/js/supabase.js"></script>
-    <script src="/static/js/playerlg.js"></script>
+    <script type="module" src="/static/js/supabase.js"></script>
+    <script type="module" src="/static/js/playerlg.js"></script>
 
 </body>
 </html>
