tetste #não sei

--- a/tamplates/register.html
+++ b/tamplates/register.html
@@ -200,7 +200,7 @@
         <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
     </footer>
 
-    <script type="module" src="/static/js/supabase.js"></script>
-    <script type="module" src="/static/js/register.js"></script>
+    <script type="module" src="static/js/supabase.js"></script>
+    <script type="module" src="static/js/register.js"></script>
 </body>
 </html>
